Add Google AdSense integration

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,10 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="국가기술자격 기출문제 학습 사이트 - 우주도서관 SPACE">
+
+  <!-- Google AdSense 코드 - 실제 사용 시 YOUR-CLIENT-ID를 발급받은 ID로 교체하세요 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-CLIENT-ID" crossorigin="anonymous"></script>
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -29,10 +32,22 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>wooju_study_library</title>
+  <title>우주도서관 SPACE - 국가기술자격 기출문제</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- SEO 최적화를 위한 추가 메타 태그 -->
+  <meta name="keywords" content="국가기술자격, 기출문제, 기사, 산업기사, 기능사, 자격증, 시험준비">
+  <meta name="author" content="우주도서관 SPACE">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <!-- Google 애드센스 광고 표시를 위한 추가 스크립트 -->
+  <script>
+    window.addEventListener('load', function() {
+      // 광고 표시 관련 로직이 필요한 경우 여기에 추가
+    });
+  </script>
+  
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
